--- a/Zimni/CatStaGram/Base.lproj/Main.storyboard
+++ b/Zimni/CatStaGram/Base.lproj/Main.storyboard
@@ -191,25 +191,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjS-sd-e2p">
-                                <rect key="frame" x="172.5" y="433" width="69.5" height="30"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zvT-2e-AGM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="50"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_catstagram_logo" translatesAutoresizingMaskIntoConstraints="NO" id="wc8-gT-52z">
+                                        <rect key="frame" x="15" y="5" width="140" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="UjQ-qK-TVE"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cJY-Rm-kuC">
+                                        <rect key="frame" x="374" y="12.5" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="aVO-MV-yft"/>
+                                            <constraint firstAttribute="width" constant="25" id="r8f-L7-npT"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button" image="ic_home_send"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDd-FD-rZg">
+                                        <rect key="frame" x="292" y="12.5" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="25" id="4IL-J1-NU6"/>
+                                            <constraint firstAttribute="height" constant="25" id="vr0-4B-FYe"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button" image="ic_home_upload"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nEu-3P-hLU">
+                                        <rect key="frame" x="332" y="11.5" width="27" height="27"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="27" id="9fV-0S-aHU"/>
+                                            <constraint firstAttribute="width" constant="27" id="MXQ-JH-Pon"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Button" image="ic_home_heart"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="nEu-3P-hLU" firstAttribute="centerY" secondItem="zvT-2e-AGM" secondAttribute="centerY" id="4KS-1s-AHP"/>
+                                    <constraint firstItem="cJY-Rm-kuC" firstAttribute="centerY" secondItem="zvT-2e-AGM" secondAttribute="centerY" id="64g-cM-b0R"/>
+                                    <constraint firstItem="nEu-3P-hLU" firstAttribute="leading" secondItem="nDd-FD-rZg" secondAttribute="trailing" constant="15" id="6h8-wo-5E8"/>
+                                    <constraint firstItem="wc8-gT-52z" firstAttribute="top" secondItem="zvT-2e-AGM" secondAttribute="top" constant="5" id="6hN-HO-6pd"/>
+                                    <constraint firstItem="cJY-Rm-kuC" firstAttribute="leading" secondItem="nEu-3P-hLU" secondAttribute="trailing" constant="15" id="Gfd-Qj-Xf0"/>
+                                    <constraint firstAttribute="bottom" secondItem="wc8-gT-52z" secondAttribute="bottom" constant="-5" id="QZP-a5-nOc"/>
+                                    <constraint firstItem="nDd-FD-rZg" firstAttribute="centerY" secondItem="zvT-2e-AGM" secondAttribute="centerY" id="Vp6-nk-e4X"/>
+                                    <constraint firstAttribute="trailing" secondItem="cJY-Rm-kuC" secondAttribute="trailing" constant="15" id="eBV-w0-Nwp"/>
+                                    <constraint firstItem="wc8-gT-52z" firstAttribute="centerY" secondItem="zvT-2e-AGM" secondAttribute="centerY" id="eUP-Ev-sHb"/>
+                                    <constraint firstItem="wc8-gT-52z" firstAttribute="leading" secondItem="zvT-2e-AGM" secondAttribute="leading" constant="15" id="uI7-lR-zm2"/>
+                                    <constraint firstAttribute="height" constant="50" id="w7q-r1-AAI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Rrp-TN-pQ7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vjS-sd-e2p" firstAttribute="centerX" secondItem="a2U-WI-3HY" secondAttribute="centerX" id="2OT-P3-qYA"/>
-                            <constraint firstItem="vjS-sd-e2p" firstAttribute="centerY" secondItem="a2U-WI-3HY" secondAttribute="centerY" id="5Lc-Ty-N18"/>
+                            <constraint firstItem="zvT-2e-AGM" firstAttribute="leading" secondItem="Rrp-TN-pQ7" secondAttribute="leading" id="3kv-nL-Eu4"/>
+                            <constraint firstItem="zvT-2e-AGM" firstAttribute="top" secondItem="Rrp-TN-pQ7" secondAttribute="top" id="al9-eU-DsA"/>
+                            <constraint firstItem="Rrp-TN-pQ7" firstAttribute="trailing" secondItem="zvT-2e-AGM" secondAttribute="trailing" id="fI9-yv-bf8"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" id="qvm-3v-m2H"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cqz-ba-7OV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="229" y="1489"/>
+            <point key="canvasLocation" x="228.98550724637684" y="1488.6160714285713"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="xXi-a4-95Y">
@@ -426,6 +473,9 @@
         <image name="arrow.left" catalog="system" width="128" height="98"/>
         <image name="f.square.fill" catalog="system" width="128" height="114"/>
         <image name="ic_catstagram_logo" width="476" height="96"/>
+        <image name="ic_home_heart" width="512" height="512"/>
+        <image name="ic_home_send" width="512" height="512"/>
+        <image name="ic_home_upload" width="512" height="512"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
