--- a/Zimni/CatStaGram/Base.lproj/Main.storyboard
+++ b/Zimni/CatStaGram/Base.lproj/Main.storyboard
@@ -293,6 +293,44 @@
             </objects>
             <point key="canvasLocation" x="228.98550724637684" y="1488.6160714285713"/>
         </scene>
+        <!--릴스-->
+        <scene sceneID="4K1-Di-TiN">
+            <objects>
+                <viewController storyboardIdentifier="ReelsVC" id="zxH-bN-hM2" customClass="ReelsViewController" customModule="CatStaGram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nBh-D4-q0Q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pci-mf-v9b">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vXc-8t-nzn">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Xwz-bx-kIq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Pci-mf-v9b" firstAttribute="top" secondItem="Xwz-bx-kIq" secondAttribute="top" id="0VH-Ba-cHf"/>
+                            <constraint firstItem="Pci-mf-v9b" firstAttribute="leading" secondItem="Xwz-bx-kIq" secondAttribute="leading" id="9M0-lH-ang"/>
+                            <constraint firstItem="Xwz-bx-kIq" firstAttribute="bottom" secondItem="Pci-mf-v9b" secondAttribute="bottom" id="IqD-nn-nlP"/>
+                            <constraint firstItem="Xwz-bx-kIq" firstAttribute="trailing" secondItem="Pci-mf-v9b" secondAttribute="trailing" id="j1G-az-w9n"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="릴스" id="1G5-Hs-kch"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Pci-mf-v9b" id="D4Z-zL-8gd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IwI-at-XfM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="931" y="1505"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="xXi-a4-95Y">
             <objects>
@@ -305,6 +343,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="6fQ-AN-AYW" kind="relationship" relationship="viewControllers" id="yXw-t0-AG3"/>
+                        <segue destination="zxH-bN-hM2" kind="relationship" relationship="viewControllers" id="SAI-jn-g9h"/>
                         <segue destination="vGD-dh-5Ue" kind="relationship" relationship="viewControllers" id="EJb-hV-Eex"/>
                     </connections>
                 </tabBarController>
